--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-site",
+  "name": "personal-site-dhruv",
   "version": "3.0.1",
   "homepage": "https://dhruvdoshi25.github.io",
   "license": "MIT",
